Updated README, added H2 database, and implemented repositories